# BizTrack

./: pyproject.toml
shop_management/: database.py  main.py  shop.py  shop_gui.py
